--- a/website/index.html
+++ b/website/index.html
@@ -15,13 +15,16 @@
     <div class="uitleg">
         <img class="test" src="images/logo.jpg" alt="">
         <div class="tekst"></div>
-        <p> Het Nationaal Videogame Museum is 'the place to be' voor iedereen 
-            die meer wil weten (én beleven) over de geschiedenis, 
-            maatschappelijke en culturele kant van videogames. 
-            Het museum laat haar bezoekers ook de games van morgen ervaren. 
-            Gamers van jong tot oud zijn welkom om te spelen, ontdekken, 
-            leren en ervaringen online te delen.</p>
+        <h2 class="uitlegtitle">Nationaal Videogame Museum</h2>
+        <p class="uitlegtext"> Het Nationaal Videogame Museum is 'the place to be' voor iedereen 
+            die meer wil weten (én beleven) over de geschiedenis, <br>
+            maatschappelijke en culturele kant van videogames. <br>
+            Het museum laat haar bezoekers ook de games van morgen ervaren. <br>
+            Gamers van jong tot oud zijn welkom om te spelen, ontdekken, <br>
+            leren en ervaringen online te delen. <br>
+        </p>
         </div>
+    
         
     </main>
 </body>
