--- a/niew/index.html
+++ b/niew/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script src="app.js" defer></script>
     <title>Leon</title>
 </head>
 <Body>
@@ -61,7 +62,21 @@
 
         <div>
             <section4>
-                <p>game</p>
+                <canvas id="canvasid"></canvas>
+                <h1 class="score">SCORE: <span>00</span></h1>
+                <div class="board">
+                    <div class="hole"></div>
+                    <div class="hole"></div>
+                    <div class="hole"></div>
+                    <div class="hole"></div>
+                    <div class="hole"></div>
+                    <div class="hole"></div>
+                    <div class="hole"></div>
+                    <div class="hole"></div>
+                    <div class="hole"></div>
+                    </div>
+                    <div class="cursor"></div>
+
             </section4>
         </div>
             
