--- a/website/index.html
+++ b/website/index.html
@@ -10,9 +10,9 @@
 </head>
 <Body>
     <header id="header">
+        <img class="logo" src="images/logo.jpg" alt="">
         <nav>
             <ul>
-                <li><img class="logo" src="images/logo.jpg" alt=""></li>
                 <li><a href="https://www.youtube.com/">home</a></li>
                 <li>die andere</li>
                 <li>geschiedenis</li>
@@ -34,6 +34,7 @@
 
         <div>
             <section1>
+                <img src="images/herftst.svg" alt="">
                 <p>Maandag Gesloten
                     Dinsdag Gesloten
                     Woensdag 10.00 - 18.00 uur
