--- a/website/index.html
+++ b/website/index.html
@@ -54,6 +54,7 @@
             </section2>
 
             <section3>
+                <img src="images/mapp.svg" alt="">
                  <p>Het museum is gevestigd in het midden van de passage van Stadshart Zoetermeer, 
                     op de eerste verdieping bovenaan de roltrap. Hier was voorheen de V&D gevestigd.
                  </p>
