--- a/website/index.html
+++ b/website/index.html
@@ -6,17 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <script src="app.js" defer></script>
-    <title>Leon</title>
+    <title>LeonCallum</title>
 </head>
 <Body>
     <header id="header">
         <img class="logo" src="images/logo.jpg" alt="">
         <nav>
             <ul>
-                <li><a href="https://www.youtube.com/">home</a></li>
-                <li>die andere</li>
-                <li>geschiedenis</li>
-                <li>info</li>
+                <li><a href="https://www.youtube.com/">Home</a></li>
+                <li>Tickets</li>
+                <li>Geschiedenis</li>
+                <li>Contact & info</li>
+                <li>Reviews</li>
             </ul>
         </nav>
     </header>
