--- a/website/index.html
+++ b/website/index.html
@@ -36,6 +36,7 @@
         <div>
             <section1>
                 <img src="images/herftst.svg" alt="">
+                <h1>Openings tijden</h1>
                 <p>Maandag Gesloten
                     Dinsdag Gesloten
                     Woensdag 10.00 - 18.00 uur
@@ -47,6 +48,7 @@
             </section1>
 
             <section2>
+                <h1>Geschiedenis</h1>
                 <p>Die werd in 2011 gevonden aan de Cobaltstraat in Zoetermeer. 
                     Daar besloot Hasan om met 4 vrienden de locatie te huren 
                     en kon het avontuur groeien tot een eigen ontmoetingsplek om hun hobby uit te oefenen 
@@ -56,6 +58,7 @@
 
             <section3>
                 <img src="images/mapp.svg" alt="">
+                <h1>Locatie</h1>
                  <p>Het museum is gevestigd in het midden van de passage van Stadshart Zoetermeer, 
                     op de eerste verdieping bovenaan de roltrap. Hier was voorheen de V&D gevestigd.
                  </p>
