--- a/website/index.html
+++ b/website/index.html
@@ -13,11 +13,11 @@
         <img class="logo" src="images/logo.jpg" alt="">
         <nav>
             <ul>
-                <li><a href="https://www.youtube.com/">Home</a></li>
-                <li>Tickets</li>
-                <li>Geschiedenis</li>
-                <li>Contact & info</li>
-                <li>Reviews</li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Tickets.html">Tickets</a></li>
+                <li><a href="Geschiedenis.html">Geschiedenis</a></li>
+                <li><a href="contact.html">Contact & info</a></li>
+                <li><a href="reviews.html">Reviews</a></li>
             </ul>
         </nav>
     </header>
@@ -35,21 +35,26 @@
 
         <div>
             <section1>
+                <div class="image">
                 <img src="images/herftst.svg" alt="">
+                </div>
                 <h1>Openings tijden</h1>
-                <p>Maandag Gesloten
-                    Dinsdag Gesloten
-                    Woensdag 10.00 - 18.00 uur
-                    Donderdag 10.00 - 18.00 uur
-                    Vrijdag 10.00 - 21.00 uur
-                    Zaterdag 10.00 - 18.00 uur
-                    Zondag 12.00 - 18.00 uur 
+                <p class="info">Maandag Gesloten<br />
+                    Dinsdag Gesloten<br />
+                    Woensdag 10.00 - 18.00 uur<br />
+                    Donderdag 10.00 - 18.00 uur<br />
+                    Vrijdag 10.00 - 21.00 uur<br />
+                    Zaterdag 10.00 - 18.00 uur<br />
+                    Zondag 12.00 - 18.00 uur <br/>
                 </p> 
             </section1>
 
             <section2>
+                <div class="image">
+                    <img src="images/herftst.svg" alt="">
+                </div>
                 <h1>Geschiedenis</h1>
-                <p>Die werd in 2011 gevonden aan de Cobaltstraat in Zoetermeer. 
+                <p class="info">Die werd in 2011 gevonden aan de Cobaltstraat in Zoetermeer. 
                     Daar besloot Hasan om met 4 vrienden de locatie te huren 
                     en kon het avontuur groeien tot een eigen ontmoetingsplek om hun hobby uit te oefenen 
                     en lekker te ontspannen met een game.
@@ -57,9 +62,11 @@
             </section2>
 
             <section3>
-                <img src="images/mapp.svg" alt="">
+                <div class="image">
+                    <img src="images/mapp.svg" alt="">
+                </div>
                 <h1>Locatie</h1>
-                 <p>Het museum is gevestigd in het midden van de passage van Stadshart Zoetermeer, 
+                <p class="info">Het museum is gevestigd in het midden van de passage van Stadshart Zoetermeer, 
                     op de eerste verdieping bovenaan de roltrap. Hier was voorheen de V&D gevestigd.
                  </p>
             </section3>
@@ -68,7 +75,6 @@
 
         <div>
             <section4>
-                <canvas id="canvasid"></canvas>
                 <h1 class="score">SCORE: <span>00</span></h1>
                 <div class="board">
                     <div class="hole"></div>
@@ -80,9 +86,10 @@
                     <div class="hole"></div>
                     <div class="hole"></div>
                     <div class="hole"></div>
-                    </div>
-                    <div class="cursor"></div>
-
+                </div>
+                <div class="cursor"></div>
+            
+                <script src="main.js"></script>
             </section4>
         </div>
             
