--- a/website/index.html
+++ b/website/index.html
@@ -75,6 +75,7 @@
 
         <div>
             <section4>
+                <canvas></canvas>
                 <h1 class="score">SCORE: <span>00</span></h1>
                 <div class="board">
                     <div class="hole"></div>
@@ -88,6 +89,7 @@
                     <div class="hole"></div>
                 </div>
                 <div class="cursor"></div>
+            </canvas>
             
                 <script src="main.js"></script>
             </section4>
