--- a/website/index.html
+++ b/website/index.html
@@ -100,7 +100,21 @@
     
        <a class="top" href="#header">top</a>
 
-       <footer><p>Leon Westerveld</p></footer>
+       <footer><p>Leon Westerveld
+
+        CONTACT</br>
+Algemene vragen:</br>
+</br>
+info@nationaalvideogamemuseum.nl</br>
+</br>
+Pers:</br>
+</br>
+pers@nationaalvideogamemuseum.nl</br>
+</br>
+Zakelijk:</br>
+</br>
+zakelijk@nationaalvideogamemuseum.nl</br>
+       </p></footer>
 
 </Body>
 </html>
