--- a/website/Geschiedenis.html
+++ b/website/Geschiedenis.html
@@ -35,7 +35,7 @@
 
 
         </main>
-        <footer><p>Leon Westerveld</p></footer>
+        <footer><p>Leon Westing the field</p></footer>
     
     </Body>
     </html>        
