--- a/website/index.html
+++ b/website/index.html
@@ -100,7 +100,7 @@
     
        <a class="top" href="#header">top</a>
 
-       <footer><p>Leon Westerveld</p></footer>
+       <footer><p>Leon Westing the field</p></footer>
 
 </Body>
 </html>
