--- a/website/contact.html
+++ b/website/contact.html
@@ -10,7 +10,7 @@
 </head>
 <Body>
     <header id="header">
-        <img class="logo" src="images/logo.jpg" alt="">
+        <img class="logo" src="img/logo.jpg" alt="">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -21,6 +21,7 @@
             </ul>
         </nav>
     </header>
+    
     <main>
 
 
@@ -34,8 +35,12 @@
 
 
 
+
     </main>
-    <footer><p>Leon Westerveld</p></footer>
+
+    <footer>
+        <p>Leon Westerveld</p>
+    </footer>
 
 </Body>
 </html>
