--- a/website/index.html
+++ b/website/index.html
@@ -86,8 +86,8 @@
             </div>
         </div>
 
-        <div id="game">
-            <canvas></canvas>
+        <div class="game" id="game">
+            <canvas id="canvasID">
                 <h1 class="score">SCORE: <span>00</span></h1>
                 <div class="board">
                     <div class="hole"></div>
@@ -103,7 +103,7 @@
                 <div class="cursor"></div>
             </canvas>
             
-                <script src="main.js"></script>
+            
         </div>
 
 
