--- a/website/index.html
+++ b/website/index.html
@@ -8,7 +8,7 @@
     <script src="app.js" defer></script>
     <title>LeonCallum</title>
 </head>
-<Body>
+<Body id="bodyIndex">
     <header id="header">
         <img class="logo" src="img/logo.jpg" alt="">
         <nav>
@@ -22,7 +22,7 @@
         </nav>
     </header>
     
-    <main>
+    <main id="index">
         <div id="section1">
             <div id="img1">
                 <img class="image1" src="img/logo.jpg" alt="logo">
