--- a/website/Geschiedenis.html
+++ b/website/Geschiedenis.html
@@ -8,8 +8,7 @@
     <script src="app.js" defer></script>
     <title>LeonCallum</title>
 </head>
-
-<body>
+<Body id="bodygeschiedenis">
     <header id="header">
         <img class="logo" src="img/logo.jpg" alt="">
         <nav>
@@ -22,65 +21,43 @@
             </ul>
         </nav>
     </header>
+    
+    <main id="geschiedenis">
+        <div id="GSection1">
 
 
-  <div class="parallax">
-    <div id="group1" class="parallax__group">
-      <div class="parallax__layer parallax__layer--base">
-      </div>
-      <div class="parallax__layer parallax__layer--fore">
-        <div class="titles">Geschiedenis</div>
-    </div>
-    </div>
-    <div id="group2" class="parallax__group">
-      <div class="parallax__layer parallax__layer--base">
-        <div class="title">Base Layer</div>
-      </div>
-      <div class="parallax__layer parallax__layer--back">
-        <div class="title">Background Layer</div>
-      </div>
-    </div>
-    <div id="group3" class="parallax__group">
-      <div class="parallax__layer parallax__layer--fore">
-        <div class="title">Foreground Layer</div>
-      </div>
-      <div class="parallax__layer parallax__layer--base">
-        <div class="title">Base Layer</div>
-      </div>
-    </div>
-    <div id="group4" class="parallax__group">
-      <div class="parallax__layer parallax__layer--base">
-        <div class="title">Base Layer</div>
-      </div>
-      <div class="parallax__layer parallax__layer--back">
-        <div class="title">Background Layer</div>
-      </div>
-      <div class="parallax__layer parallax__layer--deep">
-        <div class="title">Deep Background Layer</div>
-      </div>
-    </div>
-    <div id="group5" class="parallax__group">
-      <div class="parallax__layer parallax__layer--fore">
-        <div class="title">Foreground Layer</div>
-      </div>
-      <div class="parallax__layer parallax__layer--base">
-        <div class="title">Base Layer</div>
-      </div>
-    </div>
-    <div id="group6" class="parallax__group">
-      <div class="parallax__layer parallax__layer--back">
-        <div class="title">Background Layer</div>
-      </div>
-      <div class="parallax__layer parallax__layer--base">
-        <div class="title">Base Layer</div>
-      </div>
-    </div>
-    <div id="group7" class="parallax__group">
-      <div class="parallax__layer parallax__layer--base">
-        <div class="title">Base Layer</div>
-      </div>
-    </div>
-  </div>
+        </div>
+        <div id="GSection2">
 
-</body>
+
+        </div>
+        <div id="GSection3">
+
+
+        </div>
+        <div id="GSection4">
+
+
+        </div>
+        
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </main>
+
+    <footer>
+        <p>Leon Westerveld</p>
+    </footer>
+
+</Body>
 </html>
