--- a/website/reviews.html
+++ b/website/reviews.html
@@ -8,7 +8,7 @@
     <script src="app.js" defer></script>
     <title>LeonCallum</title>
 </head>
-<Body>
+<Body id="bodyreviews">
     <header id="header">
         <img class="logo" src="img/logo.jpg" alt="">
         <nav>
@@ -22,7 +22,7 @@
         </nav>
     </header>
     
-    <main>
+    <main id="reviews">
 
 
 
