--- a/website/index.html
+++ b/website/index.html
@@ -42,47 +42,47 @@
         </div>
 
         <div id="section2">
-            <div id="colom1">
-                <div id="img2">
-                    <img class="image2" src="img/herftst.svg" alt="">
-                </div>
-                <div class="info">
-                    <h2>Openings tijden</h2>
-                    <p class="info">Maandag Gesloten<br />
-                        Dinsdag Gesloten<br />
-                        Woensdag 10.00 - 18.00 uur<br />
-                        Donderdag 10.00 - 18.00 uur<br />
-                        Vrijdag 10.00 - 21.00 uur<br />
-                        Zaterdag 10.00 - 18.00 uur<br />
-                        Zondag 12.00 - 18.00 uur <br/>
-                    </p> 
-                </div>
+            <div class="colom1">
+                    <div class="img2">
+                        <img class="image2" src="img/herftst.svg" alt="">
+                    </div>
+                    <div class="info">
+                        <h2>Openings tijden</h2>
+                        <p class="info">Maandag Gesloten<br />
+                            Dinsdag Gesloten<br />
+                            Woensdag 10.00 - 18.00 uur<br />
+                            Donderdag 10.00 - 18.00 uur<br />
+                            Vrijdag 10.00 - 21.00 uur<br />
+                            Zaterdag 10.00 - 18.00 uur<br />
+                            Zondag 12.00 - 18.00 uur <br/>
+                        </p> 
+                    </div>
             </div>
 
-            <div id="colom2">
-                <div id="img2">
-                    <img class="image2" src="img/retro.svg" alt="">
-                </div>
-                <div class="info">
-                    <h2>Geschiedenis</h2>
-                    <p class="info">Die werd in 2011 gevonden aan de Cobaltstraat in Zoetermeer. 
-                        Daar besloot Hasan om met 4 vrienden de locatie te huren 
-                        en kon het avontuur groeien tot een eigen ontmoetingsplek om hun hobby uit te oefenen 
-                        en lekker te ontspannen met een game.
-                    </p>
-                </div>
+            <div class="colom2">
+                    <div class="img2">
+                        <img class="image2" src="img/retro.svg" alt="">
+                    </div>
+                    <div class="info">
+                        <h2>Geschiedenis</h2>
+                        <p class="info">Die werd in 2011 gevonden aan de Cobaltstraat in Zoetermeer. 
+                            Daar besloot Hasan om met 4 vrienden de locatie te huren 
+                            en kon het avontuur groeien tot een eigen ontmoetingsplek om hun hobby uit te oefenen 
+                            en lekker te ontspannen met een game.
+                        </p>
+                    </div>
             </div>
 
-            <div id="colom3">
-                <div id="img2">
-                    <img class="image2" src="img/mapp.svg" alt="">
-                </div>
-                <div class="info">
-                    <h2>Locatie</h2>
-                    <p class="info">Het museum is gevestigd in het midden van de passage van Stadshart Zoetermeer, 
-                        op de eerste verdieping bovenaan de roltrap. Hier was voorheen de V&D gevestigd.
-                     </p>
-                </div>
+            <div class="colom3">
+                    <div class="img2">
+                        <img class="image2" src="img/mapp.svg" alt="">
+                    </div>
+                    <div class="info">
+                        <h2>Locatie</h2>
+                        <p class="info">Het museum is gevestigd in het midden van de passage van Stadshart Zoetermeer, 
+                            op de eerste verdieping bovenaan de roltrap. Hier was voorheen de V&D gevestigd.
+                         </p>
+                    </div>
             </div>
         </div>
 
