--- a/website/Tickets.html
+++ b/website/Tickets.html
@@ -20,6 +20,9 @@
                 <li><a href="reviews.html">Reviews</a></li>
             </ul>
         </nav>
+        <li class="taal"><a class="top" href="ticketsengels.html"><img class="engels" src="img/engels.svg" alt=""></a></li>
+        
+        <li class="taal"><a class="top" href="Tickets.html"><img class="nederlands" src="img/nederlands.svg" alt=""></a></li>
     </header>
     
     <main id="tickets">
