--- a/website/history.html
+++ b/website/history.html
@@ -8,24 +8,24 @@
     <script src="app.js" defer></script>
     <title>LeonCallum</title>
 </head>
-<Body id="bodyreviews">
+<Body id="bodytickets">
     <header id="header">
         <img class="logo" src="img/logo.jpg" alt="">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Tickets.html">Tickets</a></li>
-                <li><a href="Geschiedenis.html">Geschiedenis</a></li>
+                <li><a href="Geschiedenis.html">History</a></li>
                 <li><a href="contact.html">Contact & info</a></li>
                 <li><a href="reviews.html">Reviews</a></li>
             </ul>
         </nav>
-        <li class="taal"><a class="top" href="reviewsengels.html"><img class="engels" src="img/engels.svg" alt=""></a></li>
+        <li class="taal"><a class="top" href="history.html"><img class="engels" src="img/engels.svg" alt=""></a></li>
         
-        <li class="taal"><a class="top" href="reviews.html"><img class="nederlands" src="img/nederlands.svg" alt=""></a></li>
+        <li class="taal"><a class="top" href="Geschiedenis.html"><img class="nederlands" src="img/nederlands.svg" alt=""></a></li>
     </header>
     
-    <main id="reviews">
+    <main id="tickets">
 
 
 
