--- a/website/reviewsengels.html
+++ b/website/reviewsengels.html
@@ -8,14 +8,14 @@
     <script src="app.js" defer></script>
     <title>LeonCallum</title>
 </head>
-<Body id="bodyreviews">
+<Body id="bodytickets">
     <header id="header">
         <img class="logo" src="img/logo.jpg" alt="">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Tickets.html">Tickets</a></li>
-                <li><a href="Geschiedenis.html">Geschiedenis</a></li>
+                <li><a href="Geschiedenis.html">History</a></li>
                 <li><a href="contact.html">Contact & info</a></li>
                 <li><a href="reviews.html">Reviews</a></li>
             </ul>
@@ -25,7 +25,7 @@
         <li class="taal"><a class="top" href="reviews.html"><img class="nederlands" src="img/nederlands.svg" alt=""></a></li>
     </header>
     
-    <main id="reviews">
+    <main id="tickets">
 
 
 
