--- a/website/history.html
+++ b/website/history.html
@@ -8,16 +8,16 @@
     <script src="app.js" defer></script>
     <title>LeonCallum</title>
 </head>
-<Body id="bodytickets">
+<Body id="bodygeschiedenis">
     <header id="header">
         <img class="logo" src="img/logo.jpg" alt="">
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="Tickets.html">Tickets</a></li>
-                <li><a href="Geschiedenis.html">History</a></li>
-                <li><a href="contact.html">Contact & info</a></li>
-                <li><a href="reviews.html">Reviews</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="ticketsengels.html">Tickets</a></li>
+                <li><a href="history.html">History</a></li>
+                <li><a href="contactengels.html">Contact & info</a></li>
+                <li><a href="reviewsengels.html">Reviews</a></li>
             </ul>
         </nav>
         <li class="taal"><a class="top" href="history.html"><img class="engels" src="img/engels.svg" alt=""></a></li>
@@ -25,7 +25,105 @@
         <li class="taal"><a class="top" href="Geschiedenis.html"><img class="nederlands" src="img/nederlands.svg" alt=""></a></li>
     </header>
     
-    <main id="tickets">
+    <main id="geschiedenis">
+        <div id="GSectionleft">
+            <div class="geschiedenisinfo">
+                <h3>Our history</h3>
+                <p class="tekstgeschiedenis">
+                    A garage box in The Hague is the place where the adventure started in 2008,
+                     with two friends Hasan Tasdemir and Pascal Rappailles. </br>
+                     The garage quickly became too small, after which they moved to a warehouse on an industrial estate. </br>
+                     Unfortunately, the shed was not heated and everything had to be transferred to an empty Ministry of Agriculture in the middle of winter.</br>
+                     When this building also had to be emptied,
+                     the then collection of 10 arcade video games was stored with some spare parts in an old classic car showroom. </br>
+                     Because there was no room to renovate or play with the cabinets, suitable space was looked for.</br>
+                 </br>
+                     It was found in 2011 on the Cobaltstraat in Zoetermeer. </br>
+                     There Hasan decided to rent the location with 4 friends and the adventure could grow into their own meeting place to practice their hobby
+                     and relax with a game.</br></p>
+
+            </div>
+        </div>
+        <div id="GSectionright">
+            <div class="geschiedenisinfo">
+                <h3>INSERT COIN</h3>
+                <p class="tekstgeschiedenis">
+                    Soon there were more people who wanted to join,
+                     as a result of which both the location and the hobby approach were no longer sufficient, in addition to everyone's daily work. The initiative was in danger of collapsing because of its success. </br>
+                     It was therefore decided by the friends that a professional approach was necessary and it could no longer be continued as a hobby. </br>
+                     In good consultation it was decided that one of the friends, Hasan Tasdemir, would try to develop the concept into a company. </br>
+                     The others would support him with advice and deed in their free time.</br>
+                 </br>
+                     Hasan decided to leave Cobaltstraat in 2014 and move to Bleiswijkseweg. </br>
+                     Because the income was still marginal, only anti-squat buildings could be rented,
+                     resulting in frequent relocation. </br>
+                     From Stephensonstraat to Edisonstraat where great events under the name Retro Planet were organized for the community. </br>
+                     The collection was also expanded further and further.</br>
+                     While the interest in retrogaming from family and friends grew and grew.</br>
+                 </br>
+                     That is why Hasan took the important step in 2015 to house his now extensive collection in a professional company called Playworks BV.</br>
+                 </p>
+
+            </div>
+        </div>
+        <div id="GSectionleft">
+            <div class="geschiedenisinfo">
+                <h3>EXTRA LIFE!</h3>
+                <p class="tekstgeschiedenis">
+                    In 2016 Hasan came into contact with Jan Kragt, city marketer of the municipality of Zoetermeer,
+                     who, deeply impressed by the collection, suggested the idea of turning it into a museum and setting up a foundation for it. </br>
+                     Hasan and Jan came up with the name on the spot and the National Video Game Museum was born. </br>
+                     Together with a number of important players from the Dutch game community, the National Videogame Museum Foundation was subsequently established.</br>
+                 </br>
+                     The municipal council was enthusiastic about the idea and decided to support the museum financially. </br>
+                     This made it possible to rent a heated storage facility where the entire collection could be housed and some of it exhibited.</br>
+                 </br>
+                     At the beginning of 2017, a real museum location was found in close collaboration with the municipality: </br>
+                     the former V&D building in the city center of Zoetermeer.</br>
+                 </p>
+
+            </div>
+        </div>
+        <div id="GSectionright">
+            <div class="geschiedenisinfo">
+                <h3>CONTINUE? </br>YES!</h3>
+                <p class="tekstgeschiedenis">
+                    From May 2017, a large group of volunteers and fans worked hard to get the pilot of the museum set up so that it was ready to play on December 1, 2017! </br>
+                     The enormous influx of enthusiastic visitors and the many positive reactions to our museum speak for themselves.</br>
+                 </br>
+                     The National Video Game Museum has now become a great success, thanks in part to the tireless efforts of all our employees and volunteers.</br>
+                 </p>
+
+            </div>
+        </div>
+        <div id="GSection5">
+            <div class="geschiedenisinfo">
+                <h3>LEVEL UP</h3>
+                <p class="tekstgeschiedenis">
+                    We are now busy enlarging the museum,
+                     deepening the experience and strengthening the museological and educational value of our beautiful museum. </br>
+                     We are doing everything we can to further professionalize the museum and prepare it for the next level at a permanent and definitive location.</br>
+
+ 
+
+                     And our ambition goes much further, because we want the National Videogame Museum to grow into a total concept, including:</br>
+                 </br>
+                     - a National Game Knowledge Center;</br>
+                 </br>
+                     - a National Videogame Archive;</br>
+                 </br>
+                     - an eSports arena;</br>
+                 </br>
+                     - a Hacker-/makerspace for young and old;</br>
+                 </br>
+                     - a game fair and event location</br>
+                 </p>
+
+            </div>
+
+
+        </div>
+        
 
 
 
