--- a/website/reviewsengels.html
+++ b/website/reviewsengels.html
@@ -13,11 +13,11 @@
         <img class="logo" src="img/logo.jpg" alt="">
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="Tickets.html">Tickets</a></li>
-                <li><a href="Geschiedenis.html">History</a></li>
-                <li><a href="contact.html">Contact & info</a></li>
-                <li><a href="reviews.html">Reviews</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="ticketsengels.html">Tickets</a></li>
+                <li><a href="history.html">History</a></li>
+                <li><a href="contactengels.html">Contact & info</a></li>
+                <li><a href="reviewsengels.html">Reviews</a></li>
             </ul>
         </nav>
         <li class="taal"><a class="top" href="reviewsengels.html"><img class="engels" src="img/engels.svg" alt=""></a></li>
