--- a/website/reviews.html
+++ b/website/reviews.html
@@ -33,7 +33,7 @@
                 </div>
                 <div id="tekst">
                         <h1>Kjell Durge</h1>
-                        <p class="informatie">
+                        <p class="informatieKjell">
                             bla bla bla
                         </p>
                     </div>
