--- a/website/history.html
+++ b/website/history.html
@@ -12,7 +12,7 @@
     <header id="header">
         <img class="logo" src="img/logo.jpg" alt="">
         <nav>
-            <ul>
+            <ul class="head">
                 <li><a href="home.html">Home</a></li>
                 <li><a href="ticketsengels.html">Tickets</a></li>
                 <li><a href="history.html">History</a></li>
