--- a/website/index.html
+++ b/website/index.html
@@ -12,7 +12,7 @@
     <header id="header">
         <img class="logo" src="img/logo.jpg" alt="">
         <nav>
-            <ul class="headerlist">
+            <ul  class="head">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Tickets.html">Tickets</a></li>
                 <li><a href="Geschiedenis.html">Geschiedenis</a></li>
