--- a/website/reviewsengels.html
+++ b/website/reviewsengels.html
@@ -9,7 +9,7 @@
     <title>LeonCallum</title>
 </head>
 <Body id="bodytickets">
-    <header id="header">
+    <header class="head">
         <img class="logo" src="img/logo.jpg" alt="">
         <nav>
             <ul>
