--- a/website/home.html
+++ b/website/home.html
@@ -9,7 +9,7 @@
     <title>LeonCallum</title>
 </head>
 <Body id="bodytickets">
-    <header class="head">
+    <header id="header">
         <img class="logo" src="img/logo.jpg" alt="">
         <nav>
             <ul class="head">
