--- a/website/reviewsengels.html
+++ b/website/reviewsengels.html
@@ -9,10 +9,10 @@
     <title>LeonCallum</title>
 </head>
 <Body id="bodytickets">
-    <header class="head">
+    <header id="header">
         <img class="logo" src="img/logo.jpg" alt="">
         <nav>
-            <ul>
+            <ul class="head">
                 <li><a href="home.html">Home</a></li>
                 <li><a href="ticketsengels.html">Tickets</a></li>
                 <li><a href="history.html">History</a></li>
