--- a/website/Tickets.html
+++ b/website/Tickets.html
@@ -9,10 +9,10 @@
     <title>LeonCallum</title>
 </head>
 <Body id="bodytickets">
-    <header class="head">
+    <header id="header">
         <img class="logo" src="img/logo.jpg" alt="">
         <nav>
-            <ul>
+            <ul class="head">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Tickets.html">Tickets</a></li>
                 <li><a href="Geschiedenis.html">Geschiedenis</a></li>
