--- a/website/index.html
+++ b/website/index.html
@@ -46,7 +46,7 @@
         </div>
 
         <div id="section2">
-            <div class="colom1">
+            <div class="colom">
                     <div class="img2">
                         <img class="image2" src="img/herftst.svg" alt="">
                     </div>
@@ -63,7 +63,7 @@
                     </div>
             </div>
 
-            <div class="colom2">
+            <div class="colom">
                     <div class="img2">
                         <img class="image2" src="img/retro.svg" alt="">
                     </div>
@@ -77,7 +77,7 @@
                     </div>
             </div>
 
-            <div class="colom3">
+            <div class="colom">
                     <div class="img2">
                         <img class="image2" src="img/mapp.svg" alt="">
                     </div>
