--- a/website/reviewsengels.html
+++ b/website/reviewsengels.html
@@ -8,7 +8,7 @@
     <script src="app.js" defer></script>
     <title>LeonCallum</title>
 </head>
-<Body id="bodytickets">
+<Body id="bodyreviews">
     <header id="header">
         <img class="logo" src="img/logo.jpg" alt="">
         <nav>
@@ -25,8 +25,7 @@
         <li class="taal"><a class="top" href="reviews.html"><img class="nederlands" src="img/nederlands.svg" alt=""></a></li>
     </header>
     
-    <main id="tickets">
-        <main id="index">
+    <main id="reviews">
             <div id="section1">
                 <div id="img1">
                     <img class="image1" src="img/download (1).jpg" alt="logo">
