--- a/website/contact.html
+++ b/website/contact.html
@@ -25,9 +25,114 @@
         <li class="taal"><a class="top" href="contact.html"><img class="nederlands" src="img/nederlands.svg" alt=""></a></li>
     </header>
     
-    <main id="contact">
-
-
+    <main class="contact">
+        <div class="contact1">
+            <div class="contactH2">Contact</div>
+            <p style="font-size: 15px; letter-spacing: normal; justify-content: flex-start; display: flex; padding-left: 50px;">Heb je een vraag, opmerking of een leuk bericht? Neem dan
+                <br>
+                gerust contact met ons op!
+                <br>
+                <br>
+                Voor boekingen en overige vragen:
+                <br>
+                info@nationaalvideogamemuseum.nl
+                <br>
+                <br>
+                Voor media en journalisten: 
+                <br>
+                pers@nationaalvideogamemuseum.nl
+                <br>
+                <br>
+                Voor sponsoring en evenementen: 
+                <br>
+                zakelijk@nationaalvideogamemuseum.nl
+                <br>
+                <br>
+                <p style="font-size: 30px; padding-left: 50px;">Adres
+                   <p style="font-size: 15px; padding-left: 50px;"> 
+                    Theaterplein 11
+                    <br>
+                    2711 EK Zoetermeer</p>
+                </p> 
+                <p style="font-size: 30px; padding-left: 50px; padding-top: 25px;">Telefoonnummer
+                    <p style="font-size: 15px; padding-left: 50px;"> 
+                        Algemeen: 079 – 360 27 18
+                        <br>
+                        Administratie en marketing: 079 – 785 39 31 
+                        <br>
+                        (Voor boekingen kunt u mailen naar
+                        <br>
+                        info@nationaalvideogamemuseum.nl)
+                 </p> 
+                 <p style="font-size: 30px; padding-left: 50px; padding-top: 25px;">Openingstijden 
+                    <p style="font-size: 15px; padding-left: 50px;"> 
+                        Maandag: gesloten
+<br>
+Dinsdag: gesloten
+<br>
+Woensdag: 10.00 - 18.00 uur
+<br>
+Donderdag: 10.00 - 18.00 uur
+<br>
+Vrijdag: 10.00 - 21.00 uur
+<br>
+Zaterdag: 10.00 - 18.00 uur
+<br>
+Zondag: 12.00 - 18.00 uur
+<br>
+​       <p style="font-size: 15px; padding-left:50px ;"> In de schoolvakanties zijn wij ook op maandag en dinsdag
+<br>
+geopend.</p>
+ </p> 
+​</p>
+</div>
+<footer class="footerContact">
+    <div class="container">
+        <div class="row">
+            <div class="footer-col">
+                <h4>company</h4>
+                <ul>
+                    <li><a href="#">about us</a></li>
+                    <br>
+                    <li><a href="#">our services</a></li>
+                    <br>
+                    <li><a href="#">privacy policy</a></li>
+                    <br>
+                    <li><a href="#">affiliate program</a></li>
+                    <br>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>get help</h4>
+                <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">shipping</a></li>
+                    <li><a href="#">returns</a></li>
+                    <li><a href="#">order status</a></li>
+                    <li><a href="#">payment options</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>online shop</h4>
+                <ul>
+                    <li><a href="#">watch</a></li>
+                    <li><a href="#">bag</a></li>
+                    <li><a href="#">shoes</a></li>
+                    <li><a href="#">dress</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>follow us</h4>
+                <div class="social-links">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
 
 
@@ -41,48 +146,5 @@
 
     </main>
 
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="footer-col">
-                    <h4>company</h4>
-                    <ul>
-                        <li><a href="#">about us</a></li>
-                        <li><a href="#">our services</a></li>
-                        <li><a href="#">privacy policy</a></li>
-                        <li><a href="#">affiliate program</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>get help</h4>4
-                    <ul>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">shipping</a></li>
-                        <li><a href="#">returns</a></li>
-                        <li><a href="#">order status</a></li>
-                        <li><a href="#">payment options</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>online shop</h4>
-                    <ul>
-                        <li><a href="#">watch</a></li>
-                        <li><a href="#">bag</a></li>
-                        <li><a href="#">shoes</a></li>
-                        <li><a href="#">dress</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>follow us</h4>
-                    <div class="social-links">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-   </footer>
 </Body>
 </html>
