--- a/website/reviews.html
+++ b/website/reviews.html
@@ -29,8 +29,8 @@
             <div class="review1">
                 <div class="line1"></div>
                     <img style="border-radius: 50%; border: 5px solid white; width: 400px; position: absolute; top: 30%; " src="img/download.jpg" alt="">
-                <div style="color: white; font-size: 42px; position: absolute; right: 50%;">Callum Andringa</div>
-                <div style="color: white; font-size: 25px; position: absolute; right: 40%;">
+                <div style="color: white; font-size: 42px; position: absolute; right: 50%; color: black;">Callum Andringa</div>
+                <div style="color: white; font-size: 25px; position: absolute; right: 40%; color: black; ">
                 <br>
                 <br>
                     ik vond het een beleveling
@@ -52,8 +52,8 @@
            <div class="review2">
                     <div class="line2"></div>
                         <img style="border-radius: 50%; border: 5px solid white;  width: 350px; height: 350px; position: absolute; top: 15%; " src="img/images (1).jpg" alt="">
-                    <div style="color: white; font-size: 42px; position: absolute; right: 20%;">Leon Westerveld</div>
-                    <div style="color: white; font-size: 25px; position: absolute; right: 41.5%;">
+                    <div style="color: white; font-size: 42px; position: absolute; right: 20%;  color: black;">Leon Westerveld</div>
+                    <div style="color: white; font-size: 25px; position: absolute; right: 41.5%; color: black;">
                     <br>
                     <br>
                         bla bla bla
@@ -72,9 +72,76 @@
                         bla
                     </div>
                 </div>
+                <div class="review3">
+                    <div class="line3"></div>
+                        <img style="border-radius: 50%; border: 5px solid white ; width: 400px; position: absolute; top: 10%; " src="img/download (1).jpg" alt="">
+                    <div style="color: white; font-size: 42px; position: absolute; right: 10%;  color: black;">Naam</div>
+                    <div style="color: white; font-size: 25px; position: absolute; right: -1%;  color: black;">
+                    <br>
+                    <br>
+                    bla bla bla
+                    <br>
+                    <br>
+                    <br>
+                    bla bla bla 
+                    <br>
+                    bla
+                    <br>
+                    <br>
+                    <br>
+                    
+                    bla bla bla
+                    <br>
+                    bla
 
     </main>
-
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col">
+                    <h4>company</h4>
+                    <ul>
+                        <li><a href="#">about us</a></li>
+                        <br>
+                        <li><a href="#">our services</a></li>
+                        <br>
+                        <li><a href="#">privacy policy</a></li>
+                        <br>
+                        <li><a href="#">affiliate program</a></li>
+                        <br>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>get help</h4>
+                    <ul>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">shipping</a></li>
+                        <li><a href="#">returns</a></li>
+                        <li><a href="#">order status</a></li>
+                        <li><a href="#">payment options</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>online shop</h4>
+                    <ul>
+                        <li><a href="#">watch</a></li>
+                        <li><a href="#">bag</a></li>
+                        <li><a href="#">shoes</a></li>
+                        <li><a href="#">dress</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>follow us</h4>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+   </footer>
    
 </Body>
 </html>
