--- a/website/Tickets.html
+++ b/website/Tickets.html
@@ -28,19 +28,14 @@
     <main id="tickets">
         <div id="tsection">
             <div class="geschiedenisinfo">
-                <h3>Onze geschiedenis</h3>
-                <p class="tekstgeschiedenis">
-                    Een garagebox in Den Haag is de plek waar het avontuur in 2008  begon, 
-                    met twee vrienden Hasan Tasdemir en Pascal Rappailles. </br>
-                    De garagebox werd al snel te klein waarna ze uitweken naar een loods op een industrieterrein. </br>
-                    Helaas was de loods niet verwarmd en moest midden in de winter alles worden overgebracht naar een leegstaand Ministerie van Landbouw.</br> 
-                    Toen ook dit pand leeggeruimd moest worden,
-                    werd de toenmalige collectie van 10 arcade videogames met wat reserveonderdelen opgeslagen in een oude showroom voor klassieke auto’s. </br>
-                    Omdat daar geen ruimte was om de kasten te renoveren of te bespelen werd uitgekeken naar passende ruimte.</br>
-                </br>
-                    Die werd in 2011 gevonden aan de Cobaltstraat in Zoetermeer. </br>
-                    Daar besloot Hasan om met 4 vrienden de locatie te huren en kon het avontuur groeien tot een eigen ontmoetingsplek om hun hobby uit te oefenen 
-                    en lekker te ontspannen met een game.</br></p>
+                <h4>TICKETS</h4>
+                <p class="teksttickets">
+                    Koop hier alvast je online ticket, maar tickets kopen kan ook gewoon aan de kassa!</br></br>
+                    Boek nu je ticket voor een bezoek aan ons museum. 
+                    Als je een ticket boekt, krijg je toegang tot ons museum voor 2 uur en mag je alle games spelen die het museum biedt. 
+                    Alle arcademachines zijn 'free to play', 
+                    je hebt dus geen muntjes nodig! Registreer nu met je voor- en achternaam bij onze ticketprovider Appybee en koop hieronder je tickets!</br></br>
+                    Lukt het niet om tickets te boeken via de website? Download dan de Appybee app in de Google Playstore of de Apple Appstore.
 
             </div>
         </div>
