--- a/website/index.html
+++ b/website/index.html
@@ -45,8 +45,9 @@
             </div>
         </div>
 
+
         <div id="section2">
-            <div class="colom">
+            <div class="colom1">
                     <div class="img2">
                         <img class="image2" src="img/herftst.svg" alt="">
                     </div>
@@ -63,7 +64,7 @@
                     </div>
             </div>
 
-            <div class="colom">
+            <div class="colom2">
                     <div class="img2">
                         <img class="image2" src="img/retro.svg" alt="">
                     </div>
@@ -77,7 +78,7 @@
                     </div>
             </div>
 
-            <div class="colom">
+            <div class="colom3">
                     <div class="img2">
                         <img class="image2" src="img/mapp.svg" alt="">
                     </div>
